# django-blog

./: .gitignore  README.md  pyproject.toml
blog/blog/: settings.py
mysite/blog/: admin.py  forms.py  models.py  urls.py  views.py
mysite/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py  0005_trigram_ext.py
mysite/blog/static/css/: blog.css
mysite/blog/templates/blog/: base.html  pagination.html
mysite/blog/templates/blog/post/: comment.html  detail.html  list.html  search.html  share.html
mysite/blog/templates/blog/post/includes/: comment_form.html
mysite/blog/templatetags/: blog_tags.py
mysite/mysite/: settings.py  urls.py
