[project]
name = "django-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "django-extensions>=4.1",
    "django-taggit>=6.1.0",
    "dotenv>=0.9.9",
    "markdown>=3.9",
    "psycopg>=3.2.10",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.2",
    "django-stubs-ext>=5.2.2",
    "django-types>=0.22.0",
    "pre-commit>=4.2.0",
    "ruff>=0.12.8",
]
